Changes in align and fix sume bugs

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .container {
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -284,31 +283,6 @@
 .info-display,
 .view-container {
   font-size: 1.2em;
-}
-
-
-/*MATRIX BUTTONS*/
-.matrix-buttons {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  width: 320px;
-  height: 70px;
-  overflow: hidden;
-  border-radius: 20px;
-  gap: 3px;
-  background-color: #0184c2;
-}
-
-.matrix-btn {
-  cursor: pointer;
-  background-color: #00aaf8;
-  border: 0;
-  font-size: medium;
-  color: #005e89;
-}
-
-.matrix-btn:hover {
-  background-color: #4ec7ff;
 }
 
 .case-right-mid-section {
