--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
 
 body {
   background-color: #8d99ae;
+  margin: 0;
+  padding: 0;
   width: 100%;
+  height: 100vh;
   font-family: VT323, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: grid;
+  place-content: center;
 }
